<resources>
    <string name="app_name">WizQuiz</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="images">Image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="wiz_quiz">Wiz Quiz!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="e_g_asim">e.g. Asim</string>
    <string name="start">Start</string>
</resources>